--- a/gitops/apps/home-assistant/schedule-configmap.yaml
+++ b/gitops/apps/home-assistant/schedule-configmap.yaml
@@ -45,301 +45,301 @@ data:
         icon: mdi:weather-sunrise
         has_time: true
         has_date: false
-        initial: "06:00"  # Default: 06:00
+        initial: "06:00"
       living_room_schedule_1_end:
         name: "Living_room Morning End"
         icon: mdi:weather-sunrise
         has_time: true
         has_date: false
-        initial: "09:00"  # Default: 09:00
+        initial: "09:00"
       living_room_schedule_2_start:
         name: "Living_room Day Start"
         icon: mdi:weather-sunny
         has_time: true
         has_date: false
-        initial: "09:00"  # Default: 09:00
+        initial: "09:00"
       living_room_schedule_2_end:
         name: "Living_room Day End"
         icon: mdi:weather-sunny
         has_time: true
         has_date: false
-        initial: "17:00"  # Default: 17:00
+        initial: "17:00"
       living_room_schedule_3_start:
         name: "Living_room Evening Start"
         icon: mdi:weather-sunset
         has_time: true
         has_date: false
-        initial: "17:00"  # Default: 17:00
+        initial: "17:00"
       living_room_schedule_3_end:
         name: "Living_room Evening End"
         icon: mdi:weather-sunset
         has_time: true
         has_date: false
-        initial: "21:00"  # Default: 21:00
+        initial: "21:00"
       living_room_schedule_4_start:
         name: "Living_room Night Start"
         icon: mdi:weather-night
         has_time: true
         has_date: false
-        initial: "21:00"  # Default: 21:00
+        initial: "21:00"
       living_room_schedule_4_end:
         name: "Living_room Night End"
         icon: mdi:weather-night
         has_time: true
         has_date: false
-        initial: "23:00"  # Default: 23:00
+        initial: "23:00"
       living_room_schedule_5_start:
         name: "Living_room Late Night Start"
         icon: mdi:weather-sunrise
         has_time: true
         has_date: false
-        initial: "23:00"  # Default: 23:00
+        initial: "23:00"
       living_room_schedule_5_end:
         name: "Living_room Late Night End"
         icon: mdi:weather-sunrise
         has_time: true
         has_date: false
-        initial: "06:00"  # Default: 06:00
+        initial: "06:00"
       kitchen_schedule_1_start:
         name: "Kitchen Morning Start"
         icon: mdi:weather-sunrise
         has_time: true
         has_date: false
-        initial: "06:00"  # Default: 06:00
+        initial: "06:00"
       kitchen_schedule_1_end:
         name: "Kitchen Morning End"
         icon: mdi:weather-sunrise
         has_time: true
         has_date: false
-        initial: "09:00"  # Default: 09:00
+        initial: "09:00"
       kitchen_schedule_2_start:
         name: "Kitchen Day Start"
         icon: mdi:weather-sunny
         has_time: true
         has_date: false
-        initial: "09:00"  # Default: 09:00
+        initial: "09:00"
       kitchen_schedule_2_end:
         name: "Kitchen Day End"
         icon: mdi:weather-sunny
         has_time: true
         has_date: false
-        initial: "17:00"  # Default: 17:00
+        initial: "17:00"
       kitchen_schedule_3_start:
         name: "Kitchen Evening Start"
         icon: mdi:weather-sunset
         has_time: true
         has_date: false
-        initial: "17:00"  # Default: 17:00
+        initial: "17:00"
       kitchen_schedule_3_end:
         name: "Kitchen Evening End"
         icon: mdi:weather-sunset
         has_time: true
         has_date: false
-        initial: "21:00"  # Default: 21:00
+        initial: "21:00"
       kitchen_schedule_4_start:
         name: "Kitchen Night Start"
         icon: mdi:weather-night
         has_time: true
         has_date: false
-        initial: "21:00"  # Default: 21:00
+        initial: "21:00"
       kitchen_schedule_4_end:
         name: "Kitchen Night End"
         icon: mdi:weather-night
         has_time: true
         has_date: false
-        initial: "23:00"  # Default: 23:00
+        initial: "23:00"
       kitchen_schedule_5_start:
         name: "Kitchen Late Night Start"
         icon: mdi:weather-sunrise
         has_time: true
         has_date: false
-        initial: "23:00"  # Default: 23:00
+        initial: "23:00"
       kitchen_schedule_5_end:
         name: "Kitchen Late Night End"
         icon: mdi:weather-sunrise
         has_time: true
         has_date: false
-        initial: "06:00"  # Default: 06:00
+        initial: "06:00"
       bedroom_schedule_1_start:
         name: "Bedroom Morning Start"
         icon: mdi:weather-sunrise
         has_time: true
         has_date: false
-        initial: "06:00"  # Default: 06:00
+        initial: "06:00"
       bedroom_schedule_1_end:
         name: "Bedroom Morning End"
         icon: mdi:weather-sunrise
         has_time: true
         has_date: false
-        initial: "09:00"  # Default: 09:00
+        initial: "09:00"
       bedroom_schedule_2_start:
         name: "Bedroom Day Start"
         icon: mdi:weather-sunny
         has_time: true
         has_date: false
-        initial: "09:00"  # Default: 09:00
+        initial: "09:00"
       bedroom_schedule_2_end:
         name: "Bedroom Day End"
         icon: mdi:weather-sunny
         has_time: true
         has_date: false
-        initial: "17:00"  # Default: 17:00
+        initial: "17:00"
       bedroom_schedule_3_start:
         name: "Bedroom Evening Start"
         icon: mdi:weather-sunset
         has_time: true
         has_date: false
-        initial: "17:00"  # Default: 17:00
+        initial: "17:00"
       bedroom_schedule_3_end:
         name: "Bedroom Evening End"
         icon: mdi:weather-sunset
         has_time: true
         has_date: false
-        initial: "21:00"  # Default: 21:00
+        initial: "21:00"
       bedroom_schedule_4_start:
         name: "Bedroom Night Start"
         icon: mdi:weather-night
         has_time: true
         has_date: false
-        initial: "21:00"  # Default: 21:00
+        initial: "21:00"
       bedroom_schedule_4_end:
         name: "Bedroom Night End"
         icon: mdi:weather-night
         has_time: true
         has_date: false
-        initial: "23:00"  # Default: 23:00
+        initial: "23:00"
       bedroom_schedule_5_start:
         name: "Bedroom Late Night Start"
         icon: mdi:weather-sunrise
         has_time: true
         has_date: false
-        initial: "23:00"  # Default: 23:00
+        initial: "23:00"
       bedroom_schedule_5_end:
         name: "Bedroom Late Night End"
         icon: mdi:weather-sunrise
         has_time: true
         has_date: false
-        initial: "06:00"  # Default: 06:00
+        initial: "06:00"
       bathroom_schedule_1_start:
         name: "Bathroom Morning Start"
         icon: mdi:weather-sunrise
         has_time: true
         has_date: false
-        initial: "06:00"  # Default: 06:00
+        initial: "06:00"
       bathroom_schedule_1_end:
         name: "Bathroom Morning End"
         icon: mdi:weather-sunrise
         has_time: true
         has_date: false
-        initial: "09:00"  # Default: 09:00
+        initial: "09:00"
       bathroom_schedule_2_start:
         name: "Bathroom Day Start"
         icon: mdi:weather-sunny
         has_time: true
         has_date: false
-        initial: "09:00"  # Default: 09:00
+        initial: "09:00"
       bathroom_schedule_2_end:
         name: "Bathroom Day End"
         icon: mdi:weather-sunny
         has_time: true
         has_date: false
-        initial: "17:00"  # Default: 17:00
+        initial: "17:00"
       bathroom_schedule_3_start:
         name: "Bathroom Evening Start"
         icon: mdi:weather-sunset
         has_time: true
         has_date: false
-        initial: "17:00"  # Default: 17:00
+        initial: "17:00"
       bathroom_schedule_3_end:
         name: "Bathroom Evening End"
         icon: mdi:weather-sunset
         has_time: true
         has_date: false
-        initial: "21:00"  # Default: 21:00
+        initial: "21:00"
       bathroom_schedule_4_start:
         name: "Bathroom Night Start"
         icon: mdi:weather-night
         has_time: true
         has_date: false
-        initial: "21:00"  # Default: 21:00
+        initial: "21:00"
       bathroom_schedule_4_end:
         name: "Bathroom Night End"
         icon: mdi:weather-night
         has_time: true
         has_date: false
-        initial: "23:00"  # Default: 23:00
+        initial: "23:00"
       bathroom_schedule_5_start:
         name: "Bathroom Late Night Start"
         icon: mdi:weather-sunrise
         has_time: true
         has_date: false
-        initial: "23:00"  # Default: 23:00
+        initial: "23:00"
       bathroom_schedule_5_end:
         name: "Bathroom Late Night End"
         icon: mdi:weather-sunrise
         has_time: true
         has_date: false
-        initial: "06:00"  # Default: 06:00
+        initial: "06:00"
       hallway_schedule_1_start:
         name: "Hallway Morning Start"
         icon: mdi:weather-sunrise
         has_time: true
         has_date: false
-        initial: "06:00"  # Default: 06:00
+        initial: "06:00"
       hallway_schedule_1_end:
         name: "Hallway Morning End"
         icon: mdi:weather-sunrise
         has_time: true
         has_date: false
-        initial: "09:00"  # Default: 09:00
+        initial: "09:00"
       hallway_schedule_2_start:
         name: "Hallway Day Start"
         icon: mdi:weather-sunny
         has_time: true
         has_date: false
-        initial: "09:00"  # Default: 09:00
+        initial: "09:00"
       hallway_schedule_2_end:
         name: "Hallway Day End"
         icon: mdi:weather-sunny
         has_time: true
         has_date: false
-        initial: "17:00"  # Default: 17:00
+        initial: "17:00"
       hallway_schedule_3_start:
         name: "Hallway Evening Start"
         icon: mdi:weather-sunset
         has_time: true
         has_date: false
-        initial: "17:00"  # Default: 17:00
+        initial: "17:00"
       hallway_schedule_3_end:
         name: "Hallway Evening End"
         icon: mdi:weather-sunset
         has_time: true
         has_date: false
-        initial: "21:00"  # Default: 21:00
+        initial: "21:00"
       hallway_schedule_4_start:
         name: "Hallway Night Start"
         icon: mdi:weather-night
         has_time: true
         has_date: false
-        initial: "21:00"  # Default: 21:00
+        initial: "21:00"
       hallway_schedule_4_end:
         name: "Hallway Night End"
         icon: mdi:weather-night
         has_time: true
         has_date: false
-        initial: "23:00"  # Default: 23:00
+        initial: "23:00"
       hallway_schedule_5_start:
         name: "Hallway Late Night Start"
         icon: mdi:weather-sunrise
         has_time: true
         has_date: false
-        initial: "23:00"  # Default: 23:00
+        initial: "23:00"
       hallway_schedule_5_end:
         name: "Hallway Late Night End"
         icon: mdi:weather-sunrise
         has_time: true
         has_date: false
-        initial: "06:00"  # Default: 06:00
+        initial: "06:00"
 
     input_select:
       # Room selector for dashboard
@@ -371,7 +371,7 @@ data:
           - "nightlight"
           - "read"
           - "dimmed"
-        initial: "energize"  # Default: energize
+        initial: "energize"
       living_room_schedule_2_scene:
         name: "Living_room Day Scene"
         icon: mdi:weather-sunny
@@ -382,7 +382,7 @@ data:
           - "nightlight"
           - "read"
           - "dimmed"
-        initial: "concentrate"  # Default: concentrate
+        initial: "concentrate"
       living_room_schedule_3_scene:
         name: "Living_room Evening Scene"
         icon: mdi:weather-sunset
@@ -393,7 +393,7 @@ data:
           - "nightlight"
           - "read"
           - "dimmed"
-        initial: "relax"  # Default: relax
+        initial: "relax"
       living_room_schedule_4_scene:
         name: "Living_room Night Scene"
         icon: mdi:weather-night
@@ -404,7 +404,7 @@ data:
           - "nightlight"
           - "read"
           - "dimmed"
-        initial: "nightlight"  # Default: nightlight
+        initial: "nightlight"
       living_room_schedule_5_scene:
         name: "Living_room Late Night Scene"
         icon: mdi:weather-sunrise
@@ -415,7 +415,7 @@ data:
           - "nightlight"
           - "read"
           - "dimmed"
-        initial: "nightlight"  # Default: nightlight
+        initial: "nightlight"
       living_room_default_scene:
         name: "Living_room Default Scene"
         icon: mdi:sofa
@@ -426,7 +426,7 @@ data:
           - "nightlight"
           - "read"
           - "dimmed"
-        initial: "relax"  # Default: relax
+        initial: "relax"
       living_room_switch_selector:
         name: "Living_room Switch Selector"
         icon: mdi:light-switch
@@ -546,7 +546,7 @@ data:
           - "nightlight"
           - "read"
           - "dimmed"
-        initial: "energize"  # Default: energize
+        initial: "energize"
       kitchen_schedule_2_scene:
         name: "Kitchen Day Scene"
         icon: mdi:weather-sunny
@@ -557,7 +557,7 @@ data:
           - "nightlight"
           - "read"
           - "dimmed"
-        initial: "concentrate"  # Default: concentrate
+        initial: "concentrate"
       kitchen_schedule_3_scene:
         name: "Kitchen Evening Scene"
         icon: mdi:weather-sunset
@@ -568,7 +568,7 @@ data:
           - "nightlight"
           - "read"
           - "dimmed"
-        initial: "relax"  # Default: relax
+        initial: "relax"
       kitchen_schedule_4_scene:
         name: "Kitchen Night Scene"
         icon: mdi:weather-night
@@ -579,7 +579,7 @@ data:
           - "nightlight"
           - "read"
           - "dimmed"
-        initial: "nightlight"  # Default: nightlight
+        initial: "nightlight"
       kitchen_schedule_5_scene:
         name: "Kitchen Late Night Scene"
         icon: mdi:weather-sunrise
@@ -590,7 +590,7 @@ data:
           - "nightlight"
           - "read"
           - "dimmed"
-        initial: "nightlight"  # Default: nightlight
+        initial: "nightlight"
       kitchen_default_scene:
         name: "Kitchen Default Scene"
         icon: mdi:chef-hat
@@ -601,7 +601,7 @@ data:
           - "nightlight"
           - "read"
           - "dimmed"
-        initial: "relax"  # Default: relax
+        initial: "relax"
       kitchen_switch_selector:
         name: "Kitchen Switch Selector"
         icon: mdi:light-switch
@@ -721,7 +721,7 @@ data:
           - "nightlight"
           - "read"
           - "dimmed"
-        initial: "energize"  # Default: energize
+        initial: "energize"
       bedroom_schedule_2_scene:
         name: "Bedroom Day Scene"
         icon: mdi:weather-sunny
@@ -732,7 +732,7 @@ data:
           - "nightlight"
           - "read"
           - "dimmed"
-        initial: "concentrate"  # Default: concentrate
+        initial: "concentrate"
       bedroom_schedule_3_scene:
         name: "Bedroom Evening Scene"
         icon: mdi:weather-sunset
@@ -743,7 +743,7 @@ data:
           - "nightlight"
           - "read"
           - "dimmed"
-        initial: "relax"  # Default: relax
+        initial: "relax"
       bedroom_schedule_4_scene:
         name: "Bedroom Night Scene"
         icon: mdi:weather-night
@@ -754,7 +754,7 @@ data:
           - "nightlight"
           - "read"
           - "dimmed"
-        initial: "nightlight"  # Default: nightlight
+        initial: "nightlight"
       bedroom_schedule_5_scene:
         name: "Bedroom Late Night Scene"
         icon: mdi:weather-sunrise
@@ -765,7 +765,7 @@ data:
           - "nightlight"
           - "read"
           - "dimmed"
-        initial: "nightlight"  # Default: nightlight
+        initial: "nightlight"
       bedroom_default_scene:
         name: "Bedroom Default Scene"
         icon: mdi:bed
@@ -776,7 +776,7 @@ data:
           - "nightlight"
           - "read"
           - "dimmed"
-        initial: "relax"  # Default: relax
+        initial: "relax"
       bedroom_switch_selector:
         name: "Bedroom Switch Selector"
         icon: mdi:light-switch
@@ -896,7 +896,7 @@ data:
           - "nightlight"
           - "read"
           - "dimmed"
-        initial: "energize"  # Default: energize
+        initial: "energize"
       bathroom_schedule_2_scene:
         name: "Bathroom Day Scene"
         icon: mdi:weather-sunny
@@ -907,7 +907,7 @@ data:
           - "nightlight"
           - "read"
           - "dimmed"
-        initial: "concentrate"  # Default: concentrate
+        initial: "concentrate"
       bathroom_schedule_3_scene:
         name: "Bathroom Evening Scene"
         icon: mdi:weather-sunset
@@ -918,7 +918,7 @@ data:
           - "nightlight"
           - "read"
           - "dimmed"
-        initial: "relax"  # Default: relax
+        initial: "relax"
       bathroom_schedule_4_scene:
         name: "Bathroom Night Scene"
         icon: mdi:weather-night
@@ -929,7 +929,7 @@ data:
           - "nightlight"
           - "read"
           - "dimmed"
-        initial: "nightlight"  # Default: nightlight
+        initial: "nightlight"
       bathroom_schedule_5_scene:
         name: "Bathroom Late Night Scene"
         icon: mdi:weather-sunrise
@@ -940,7 +940,7 @@ data:
           - "nightlight"
           - "read"
           - "dimmed"
-        initial: "nightlight"  # Default: nightlight
+        initial: "nightlight"
       bathroom_default_scene:
         name: "Bathroom Default Scene"
         icon: mdi:shower
@@ -951,7 +951,7 @@ data:
           - "nightlight"
           - "read"
           - "dimmed"
-        initial: "relax"  # Default: relax
+        initial: "relax"
       bathroom_switch_selector:
         name: "Bathroom Switch Selector"
         icon: mdi:light-switch
@@ -1071,7 +1071,7 @@ data:
           - "nightlight"
           - "read"
           - "dimmed"
-        initial: "energize"  # Default: energize
+        initial: "energize"
       hallway_schedule_2_scene:
         name: "Hallway Day Scene"
         icon: mdi:weather-sunny
@@ -1082,7 +1082,7 @@ data:
           - "nightlight"
           - "read"
           - "dimmed"
-        initial: "concentrate"  # Default: concentrate
+        initial: "concentrate"
       hallway_schedule_3_scene:
         name: "Hallway Evening Scene"
         icon: mdi:weather-sunset
@@ -1093,7 +1093,7 @@ data:
           - "nightlight"
           - "read"
           - "dimmed"
-        initial: "relax"  # Default: relax
+        initial: "relax"
       hallway_schedule_4_scene:
         name: "Hallway Night Scene"
         icon: mdi:weather-night
@@ -1104,7 +1104,7 @@ data:
           - "nightlight"
           - "read"
           - "dimmed"
-        initial: "nightlight"  # Default: nightlight
+        initial: "nightlight"
       hallway_schedule_5_scene:
         name: "Hallway Late Night Scene"
         icon: mdi:weather-sunrise
@@ -1115,7 +1115,7 @@ data:
           - "nightlight"
           - "read"
           - "dimmed"
-        initial: "nightlight"  # Default: nightlight
+        initial: "nightlight"
       hallway_default_scene:
         name: "Hallway Default Scene"
         icon: mdi:corridor
@@ -1126,7 +1126,7 @@ data:
           - "nightlight"
           - "read"
           - "dimmed"
-        initial: "relax"  # Default: relax
+        initial: "relax"
       hallway_switch_selector:
         name: "Hallway Switch Selector"
         icon: mdi:light-switch
