--- a/gitops/apps/home-assistant/dashboards/light_schedule_dashboard_compact.yaml
+++ b/gitops/apps/home-assistant/dashboards/light_schedule_dashboard_compact.yaml
@@ -74,150 +74,225 @@ views:
                       - entity: input_select.living_room_button_4_short
                       - entity: input_select.living_room_button_4_long
           
-          # Template for other rooms - much more compact
           - type: conditional
             conditions:
               - entity: input_select.room_schedule_selector
                 state: kitchen
             card:
-              type: entities
-              title: Kitchen Configuration
-              entities:
-                - entity: input_boolean.kitchen_schedule_enabled
-                - entity: input_datetime.kitchen_schedule_1_start
-                - entity: input_datetime.kitchen_schedule_1_end
-                - entity: input_datetime.kitchen_schedule_2_start
-                - entity: input_datetime.kitchen_schedule_2_end
-                - entity: input_datetime.kitchen_schedule_3_start
-                - entity: input_datetime.kitchen_schedule_3_end
-                - entity: input_datetime.kitchen_schedule_4_start
-                - entity: input_datetime.kitchen_schedule_4_end
-                - entity: input_datetime.kitchen_schedule_5_start
-                - entity: input_datetime.kitchen_schedule_5_end
-                - entity: input_select.kitchen_schedule_1_scene
-                - entity: input_select.kitchen_schedule_2_scene
-                - entity: input_select.kitchen_schedule_3_scene
-                - entity: input_select.kitchen_schedule_4_scene
-                - entity: input_select.kitchen_schedule_5_scene
-                - entity: input_select.kitchen_default_scene
-                - entity: input_select.kitchen_switch_selector
-                - entity: input_select.kitchen_switch_brightness_step
-                - entity: input_select.kitchen_switch_min_brightness
-                - entity: input_select.kitchen_switch_max_brightness
-                - entity: input_select.kitchen_button_1_short
-                - entity: input_select.kitchen_button_1_long
-                - entity: input_select.kitchen_button_2_short
-                - entity: input_select.kitchen_button_3_short
-                - entity: input_select.kitchen_button_4_short
-                - entity: input_select.kitchen_button_4_long
+              type: vertical-stack
+              title: Kitchen Schedule Settings
+              cards:
+                - type: entities
+                  title: Kitchen Schedule Control
+                  entities:
+                    - entity: input_boolean.kitchen_schedule_enabled
+                      name: Enable Kitchen Schedule
+                      icon: mdi:clock-outline
+                - type: entities
+                  title: Kitchen Time Settings
+                  entities:
+                    - entity: input_datetime.kitchen_schedule_1_start
+                    - entity: input_datetime.kitchen_schedule_1_end
+                    - entity: input_datetime.kitchen_schedule_2_start
+                    - entity: input_datetime.kitchen_schedule_2_end
+                    - entity: input_datetime.kitchen_schedule_3_start
+                    - entity: input_datetime.kitchen_schedule_3_end
+                    - entity: input_datetime.kitchen_schedule_4_start
+                    - entity: input_datetime.kitchen_schedule_4_end
+                    - entity: input_datetime.kitchen_schedule_5_start
+                    - entity: input_datetime.kitchen_schedule_5_end
+                - type: entities
+                  title: Kitchen Scene Settings
+                  entities:
+                    - entity: input_select.kitchen_schedule_1_scene
+                    - entity: input_select.kitchen_schedule_2_scene
+                    - entity: input_select.kitchen_schedule_3_scene
+                    - entity: input_select.kitchen_schedule_4_scene
+                    - entity: input_select.kitchen_schedule_5_scene
+                    - entity: input_select.kitchen_default_scene
+                - type: conditional
+                  conditions:
+                    - entity: input_select.room_switch_selector
+                      state: main_switch
+                  card:
+                    type: entities
+                    title: Kitchen Switch Configuration
+                    entities:
+                      - entity: input_select.kitchen_switch_selector
+                      - entity: input_select.kitchen_switch_brightness_step
+                      - entity: input_select.kitchen_switch_min_brightness
+                      - entity: input_select.kitchen_switch_max_brightness
+                      - entity: input_select.kitchen_button_1_short
+                      - entity: input_select.kitchen_button_1_long
+                      - entity: input_select.kitchen_button_2_short
+                      - entity: input_select.kitchen_button_3_short
+                      - entity: input_select.kitchen_button_4_short
+                      - entity: input_select.kitchen_button_4_long
           
           - type: conditional
             conditions:
               - entity: input_select.room_schedule_selector
                 state: bedroom
             card:
-              type: entities
-              title: Bedroom Configuration
-              entities:
-                - entity: input_boolean.bedroom_schedule_enabled
-                - entity: input_datetime.bedroom_schedule_1_start
-                - entity: input_datetime.bedroom_schedule_1_end
-                - entity: input_datetime.bedroom_schedule_2_start
-                - entity: input_datetime.bedroom_schedule_2_end
-                - entity: input_datetime.bedroom_schedule_3_start
-                - entity: input_datetime.bedroom_schedule_3_end
-                - entity: input_datetime.bedroom_schedule_4_start
-                - entity: input_datetime.bedroom_schedule_4_end
-                - entity: input_datetime.bedroom_schedule_5_start
-                - entity: input_datetime.bedroom_schedule_5_end
-                - entity: input_select.bedroom_schedule_1_scene
-                - entity: input_select.bedroom_schedule_2_scene
-                - entity: input_select.bedroom_schedule_3_scene
-                - entity: input_select.bedroom_schedule_4_scene
-                - entity: input_select.bedroom_schedule_5_scene
-                - entity: input_select.bedroom_default_scene
-                - entity: input_select.bedroom_switch_selector
-                - entity: input_select.bedroom_switch_brightness_step
-                - entity: input_select.bedroom_switch_min_brightness
-                - entity: input_select.bedroom_switch_max_brightness
-                - entity: input_select.bedroom_button_1_short
-                - entity: input_select.bedroom_button_1_long
-                - entity: input_select.bedroom_button_2_short
-                - entity: input_select.bedroom_button_3_short
-                - entity: input_select.bedroom_button_4_short
-                - entity: input_select.bedroom_button_4_long
+              type: vertical-stack
+              title: Bedroom Schedule Settings
+              cards:
+                - type: entities
+                  title: Bedroom Schedule Control
+                  entities:
+                    - entity: input_boolean.bedroom_schedule_enabled
+                      name: Enable Bedroom Schedule
+                      icon: mdi:clock-outline
+                - type: entities
+                  title: Bedroom Time Settings
+                  entities:
+                    - entity: input_datetime.bedroom_schedule_1_start
+                    - entity: input_datetime.bedroom_schedule_1_end
+                    - entity: input_datetime.bedroom_schedule_2_start
+                    - entity: input_datetime.bedroom_schedule_2_end
+                    - entity: input_datetime.bedroom_schedule_3_start
+                    - entity: input_datetime.bedroom_schedule_3_end
+                    - entity: input_datetime.bedroom_schedule_4_start
+                    - entity: input_datetime.bedroom_schedule_4_end
+                    - entity: input_datetime.bedroom_schedule_5_start
+                    - entity: input_datetime.bedroom_schedule_5_end
+                - type: entities
+                  title: Bedroom Scene Settings
+                  entities:
+                    - entity: input_select.bedroom_schedule_1_scene
+                    - entity: input_select.bedroom_schedule_2_scene
+                    - entity: input_select.bedroom_schedule_3_scene
+                    - entity: input_select.bedroom_schedule_4_scene
+                    - entity: input_select.bedroom_schedule_5_scene
+                    - entity: input_select.bedroom_default_scene
+                - type: conditional
+                  conditions:
+                    - entity: input_select.room_switch_selector
+                      state: main_switch
+                  card:
+                    type: entities
+                    title: Bedroom Switch Configuration
+                    entities:
+                      - entity: input_select.bedroom_switch_selector
+                      - entity: input_select.bedroom_switch_brightness_step
+                      - entity: input_select.bedroom_switch_min_brightness
+                      - entity: input_select.bedroom_switch_max_brightness
+                      - entity: input_select.bedroom_button_1_short
+                      - entity: input_select.bedroom_button_1_long
+                      - entity: input_select.bedroom_button_2_short
+                      - entity: input_select.bedroom_button_3_short
+                      - entity: input_select.bedroom_button_4_short
+                      - entity: input_select.bedroom_button_4_long
           
           - type: conditional
             conditions:
               - entity: input_select.room_schedule_selector
                 state: bathroom
             card:
-              type: entities
-              title: Bathroom Configuration
-              entities:
-                - entity: input_boolean.bathroom_schedule_enabled
-                - entity: input_datetime.bathroom_schedule_1_start
-                - entity: input_datetime.bathroom_schedule_1_end
-                - entity: input_datetime.bathroom_schedule_2_start
-                - entity: input_datetime.bathroom_schedule_2_end
-                - entity: input_datetime.bathroom_schedule_3_start
-                - entity: input_datetime.bathroom_schedule_3_end
-                - entity: input_datetime.bathroom_schedule_4_start
-                - entity: input_datetime.bathroom_schedule_4_end
-                - entity: input_datetime.bathroom_schedule_5_start
-                - entity: input_datetime.bathroom_schedule_5_end
-                - entity: input_select.bathroom_schedule_1_scene
-                - entity: input_select.bathroom_schedule_2_scene
-                - entity: input_select.bathroom_schedule_3_scene
-                - entity: input_select.bathroom_schedule_4_scene
-                - entity: input_select.bathroom_schedule_5_scene
-                - entity: input_select.bathroom_default_scene
-                - entity: input_select.bathroom_switch_selector
-                - entity: input_select.bathroom_switch_brightness_step
-                - entity: input_select.bathroom_switch_min_brightness
-                - entity: input_select.bathroom_switch_max_brightness
-                - entity: input_select.bathroom_button_1_short
-                - entity: input_select.bathroom_button_1_long
-                - entity: input_select.bathroom_button_2_short
-                - entity: input_select.bathroom_button_3_short
-                - entity: input_select.bathroom_button_4_short
-                - entity: input_select.bathroom_button_4_long
+              type: vertical-stack
+              title: Bathroom Schedule Settings
+              cards:
+                - type: entities
+                  title: Bathroom Schedule Control
+                  entities:
+                    - entity: input_boolean.bathroom_schedule_enabled
+                      name: Enable Bathroom Schedule
+                      icon: mdi:clock-outline
+                - type: entities
+                  title: Bathroom Time Settings
+                  entities:
+                    - entity: input_datetime.bathroom_schedule_1_start
+                    - entity: input_datetime.bathroom_schedule_1_end
+                    - entity: input_datetime.bathroom_schedule_2_start
+                    - entity: input_datetime.bathroom_schedule_2_end
+                    - entity: input_datetime.bathroom_schedule_3_start
+                    - entity: input_datetime.bathroom_schedule_3_end
+                    - entity: input_datetime.bathroom_schedule_4_start
+                    - entity: input_datetime.bathroom_schedule_4_end
+                    - entity: input_datetime.bathroom_schedule_5_start
+                    - entity: input_datetime.bathroom_schedule_5_end
+                - type: entities
+                  title: Bathroom Scene Settings
+                  entities:
+                    - entity: input_select.bathroom_schedule_1_scene
+                    - entity: input_select.bathroom_schedule_2_scene
+                    - entity: input_select.bathroom_schedule_3_scene
+                    - entity: input_select.bathroom_schedule_4_scene
+                    - entity: input_select.bathroom_schedule_5_scene
+                    - entity: input_select.bathroom_default_scene
+                - type: conditional
+                  conditions:
+                    - entity: input_select.room_switch_selector
+                      state: main_switch
+                  card:
+                    type: entities
+                    title: Bathroom Switch Configuration
+                    entities:
+                      - entity: input_select.bathroom_switch_selector
+                      - entity: input_select.bathroom_switch_brightness_step
+                      - entity: input_select.bathroom_switch_min_brightness
+                      - entity: input_select.bathroom_switch_max_brightness
+                      - entity: input_select.bathroom_button_1_short
+                      - entity: input_select.bathroom_button_1_long
+                      - entity: input_select.bathroom_button_2_short
+                      - entity: input_select.bathroom_button_3_short
+                      - entity: input_select.bathroom_button_4_short
+                      - entity: input_select.bathroom_button_4_long
           
           - type: conditional
             conditions:
               - entity: input_select.room_schedule_selector
                 state: hallway
             card:
-              type: entities
-              title: Hallway Configuration
-              entities:
-                - entity: input_boolean.hallway_schedule_enabled
-                - entity: input_datetime.hallway_schedule_1_start
-                - entity: input_datetime.hallway_schedule_1_end
-                - entity: input_datetime.hallway_schedule_2_start
-                - entity: input_datetime.hallway_schedule_2_end
-                - entity: input_datetime.hallway_schedule_3_start
-                - entity: input_datetime.hallway_schedule_3_end
-                - entity: input_datetime.hallway_schedule_4_start
-                - entity: input_datetime.hallway_schedule_4_end
-                - entity: input_datetime.hallway_schedule_5_start
-                - entity: input_datetime.hallway_schedule_5_end
-                - entity: input_select.hallway_schedule_1_scene
-                - entity: input_select.hallway_schedule_2_scene
-                - entity: input_select.hallway_schedule_3_scene
-                - entity: input_select.hallway_schedule_4_scene
-                - entity: input_select.hallway_schedule_5_scene
-                - entity: input_select.hallway_default_scene
-                - entity: input_select.hallway_switch_selector
-                - entity: input_select.hallway_switch_brightness_step
-                - entity: input_select.hallway_switch_min_brightness
-                - entity: input_select.hallway_switch_max_brightness
-                - entity: input_select.hallway_button_1_short
-                - entity: input_select.hallway_button_1_long
-                - entity: input_select.hallway_button_2_short
-                - entity: input_select.hallway_button_3_short
-                - entity: input_select.hallway_button_4_short
-                - entity: input_select.hallway_button_4_long
+              type: vertical-stack
+              title: Hallway Schedule Settings
+              cards:
+                - type: entities
+                  title: Hallway Schedule Control
+                  entities:
+                    - entity: input_boolean.hallway_schedule_enabled
+                      name: Enable Hallway Schedule
+                      icon: mdi:clock-outline
+                - type: entities
+                  title: Hallway Time Settings
+                  entities:
+                    - entity: input_datetime.hallway_schedule_1_start
+                    - entity: input_datetime.hallway_schedule_1_end
+                    - entity: input_datetime.hallway_schedule_2_start
+                    - entity: input_datetime.hallway_schedule_2_end
+                    - entity: input_datetime.hallway_schedule_3_start
+                    - entity: input_datetime.hallway_schedule_3_end
+                    - entity: input_datetime.hallway_schedule_4_start
+                    - entity: input_datetime.hallway_schedule_4_end
+                    - entity: input_datetime.hallway_schedule_5_start
+                    - entity: input_datetime.hallway_schedule_5_end
+                - type: entities
+                  title: Hallway Scene Settings
+                  entities:
+                    - entity: input_select.hallway_schedule_1_scene
+                    - entity: input_select.hallway_schedule_2_scene
+                    - entity: input_select.hallway_schedule_3_scene
+                    - entity: input_select.hallway_schedule_4_scene
+                    - entity: input_select.hallway_schedule_5_scene
+                    - entity: input_select.hallway_default_scene
+                - type: conditional
+                  conditions:
+                    - entity: input_select.room_switch_selector
+                      state: main_switch
+                  card:
+                    type: entities
+                    title: Hallway Switch Configuration
+                    entities:
+                      - entity: input_select.hallway_switch_selector
+                      - entity: input_select.hallway_switch_brightness_step
+                      - entity: input_select.hallway_switch_min_brightness
+                      - entity: input_select.hallway_switch_max_brightness
+                      - entity: input_select.hallway_button_1_short
+                      - entity: input_select.hallway_button_1_long
+                      - entity: input_select.hallway_button_2_short
+                      - entity: input_select.hallway_button_3_short
+                      - entity: input_select.hallway_button_4_short
+                      - entity: input_select.hallway_button_4_long
           
           - type: markdown
             content: >
